--- a/index.html
+++ b/index.html
@@ -1,38 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
 
     <title>Get Spotify Premium</title>
-</head>
+  </head>
 
-<body>
+  <body>
+    <div class="bg">
+      <div class="bgmg"></div>
+    </div>
     <header>
-        <nav>
-            <div class="logo">
-                <a href="#">
-                    <img src="Spotify-logo.svg" alt="logo" />
-                </a>
-            </div>
-        </nav>
-    </header>
-    <center>
-        
-        <h1 class="h-1">
-            Get <span class="hoverr">Premium</span> For Free. <br />
-            <span>Be <span class="hoverr">Happy</span> .</span>
-        </h1>
-        <div class="div1" style="padding: 90px">
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" id="button">Get Free Premium</a>
+      <div class="container">
+        <div class="logo">
+          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+            ><img src="Spotify-logo.svg" alt="logo"
+          /></a>
         </div>
-    </center>
-</body>
+        <div class="navbar">
+          <div class="icon-bar" onclick="Show()">
+            <i></i>
+            <i></i>
+            <i></i>
+          </div>
 
+          <ul id="nav-lists">
+            <li class="close"><span onclick="Hide()">×</span></li>
+            <li>
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Premium</a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Home</a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">About</a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
+    <center id="kk">
+      <div class="sac"></div>
+      <h1 class="h-1">
+        Get <span class="hoverr">Premium</span> For Free. <br />
+        <span>Be <span class="hoverr">Happy</span> .</span>
+      </h1>
+      <div class="div1">
+        <a
+          href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+          target="_blank"
+          id="button"
+          >Get Free Premium</a
+        >
+      </div>
+    </center>
+
+    <script>
+      var navList = document.getElementById("nav-lists");
+      function Show() {
+        navList.classList.add("_Menus-show");
+      }
+
+      function Hide() {
+        navList.classList.remove("_Menus-show");
+      }
+    </script>
+  </body>
 </html>
